--- a/about.html
+++ b/about.html
@@ -33,6 +33,7 @@
                 <li class="nav-item rob-font"><a href="index.html">Home</a></li>
                 <li class="nav-item rob-font"><a href="about.html">About</a></li>
                 <li class="nav-item rob-font"><a href="services.html">Services</a></li>
+                <li class="nav-item rob-font"><a href="testimonials.html">Testimonials</a></li>
                 <li class="nav-item rob-font"><a href="#">Contact</a></li>
                 <li class="nav-item social-nav">
                     <span class="social-nav-item"><i class="fab fa-facebook"></i></span>
@@ -225,51 +226,6 @@
         </div>
     </section>
     <!-- END: crazy about section -->
-
-    <!-- carousel about me -->
-    <section class="things-about-me">
-        <div class="things-title">
-            <h1 class="logo-3">Random things</h1>
-            <h2 class="sect-subtitle">To know about me</h2>
-        </div>
-        <div class="things-slider">
-            <div class="slider-item showing">
-                <img src="static/img/core-img/cake.jpeg" alt="Cake">
-                <div class="slide-text">
-                    <h3 class="slide-title">One</h3>
-                    <p class="normal-text">
-                        I make <span>the best</span> birthday cakes!
-                        This one is a blueberry vanilla buttercre cake.
-                        (In another life I could have been a baker)
-                    </p>
-                </div>
-            </div>
-            <div class="slider-item">
-                <img src="static/img/core-img/flowers-bunch.jpeg" alt="out-to-sea">
-                <div class="slide-text">
-                    <h3 class="slide-title">Two</h3>
-                    <p class="normal-text">
-                        I love the smell of fresh flowers!
-                        (In another other life I could have a florist)
-                    </p>
-                </div>
-            </div>
-            <div class="slider-item">
-                <img src="static/img/core-img/woman-wine.jpeg" alt="woman-on-table">
-                <div class="slide-text">
-                    <h3 class="slide-title">Three</h3>
-                    <p class="normal-text">
-                        I often <span>wish</span> I lived near the ocean because sun hats
-                        are by far my favourite accessory!
-                    </p>
-                </div>
-            </div>
-        </div>
-        <button class="slide-btn">Next thing</button>
-      
-
-    </section>
-    <!-- END: carousel about me -->
 
     <!-- Parralex services section -->
     <section class="services-cta">
