Add testimonials to all screens

--- a/testimonials.html
+++ b/testimonials.html
@@ -156,6 +156,7 @@
         <h2 class="known-for-title sect-title who-title">
             What my clients are saying?
         </h2>
+        <hr class="half-width-hr">
         <div class="testimonial-item">
             <div class="testimonial-author">
                 <h2 class="logo-font testimonial-author-name">
@@ -186,26 +187,77 @@
         <div class="testimonial-item">
             <div class="testimonial-author">
                 <h2 class="logo-font testimonial-author-name">
-                    Chris Cicchinelli
+                    Guy McGregor
                 </h2>
                 <h3 class="rob-font testimonial-author-job">
-                    President and CEO of pure performance
+                    Portfolio manager at Electric Avenue 
                 </h3>
             </div>
             <div class="testimonial-exert">
                 <p>
-                    “She cares deeply about your progress, encourages you to stretch. put my priorities in order,
-                    release stress, set achievable goals. ”
+                    “Poutine four dollar toast poke deep v. Farm-to-table flannel schlitz, squid semiotics beard iPhone synth raw deni. ”
                 </p>
             </div>
             <div class="testimonial-main">
                 <p class="normal-text">
-                    Andrea's keynote at our World Conference was truly impactful. There was no holding back which made her 
-                    relate to our audience, as well as teach them practical tools they can take back to their business as well
-                    as their personal lives to make them more successful. Her stories were both poignant and entertaining– I 
-                    loved watching the whole room laugh within the first five minutes of her talk. I appreciate that she took
-                    the time to understand the culture of our company, as well as meet with every person afterward who wanted
-                    to personally speak with her.
+                    Lyft blue bottle tofu neutra organic subway tile taiyaki slow-carb, helvetica distillery hexagon
+                     salvia. Pinterest occupy tote bag plaid vegan vape kickstarter tacos af taiyaki DIY thundercats banh mi.
+                      Health goth organic twee authentic. Direct trade pug everyday carry cred tumeric scenester neutra 
+                      williamsburg normcore vinyl live-edge kombucha PBR&B marfa. Lyft blue bottle tofu neutra organic subway 
+                      tile taiyaki slow-carb, helvetica distillery hexagon salvia. Pinterest occupy tote bag plaid vegan vape 
+                      kickstarter tacos af taiyaki DIY thundercats banh mi. 
+                </p>
+            </div>
+        </div>
+        <hr class="half-width-hr">
+        <div class="testimonial-item">
+            <div class="testimonial-author">
+                <h2 class="logo-font testimonial-author-name">
+                    Anne Mackenzie
+                </h2>
+                <h3 class="rob-font testimonial-author-job">
+                    Head of digital at Coconuts
+                </h3>
+            </div>
+            <div class="testimonial-exert">
+                <p>
+                    “Poutine four dollar toast poke deep v. Farm-to-table flannel schlitz, squid semiotics beard iPhone synth raw deni. ”
+                </p>
+            </div>
+            <div class="testimonial-main">
+                <p class="normal-text">
+                    Lyft blue bottle tofu neutra organic subway tile taiyaki slow-carb, helvetica distillery hexagon
+                     salvia. Pinterest occupy tote bag plaid vegan vape kickstarter tacos af taiyaki DIY thundercats banh mi.
+                      Health goth organic twee authentic. Direct trade pug everyday carry cred tumeric scenester neutra 
+                      williamsburg normcore vinyl live-edge kombucha PBR&B marfa. Lyft blue bottle tofu neutra organic subway 
+                      tile taiyaki slow-carb, helvetica distillery hexagon salvia. Pinterest occupy tote bag plaid vegan vape 
+                      kickstarter tacos af taiyaki DIY thundercats banh mi. 
+                </p>
+            </div>
+        </div>
+        <hr class="half-width-hr">
+        <div class="testimonial-item">
+            <div class="testimonial-author">
+                <h2 class="logo-font testimonial-author-name">
+                    Orla Hunter
+                </h2>
+                <h3 class="rob-font testimonial-author-job">
+                    Founder and head chef at Montana's Cookhouse
+                </h3>
+            </div>
+            <div class="testimonial-exert">
+                <p>
+                    “Poutine four dollar toast poke deep v. Farm-to-table flannel schlitz, squid semiotics beard iPhone synth raw deni. ”
+                </p>
+            </div>
+            <div class="testimonial-main">
+                <p class="normal-text">
+                    Lyft blue bottle tofu neutra organic subway tile taiyaki slow-carb, helvetica distillery hexagon
+                     salvia. Pinterest occupy tote bag plaid vegan vape kickstarter tacos af taiyaki DIY thundercats banh mi.
+                      Health goth organic twee authentic. Direct trade pug everyday carry cred tumeric scenester neutra 
+                      williamsburg normcore vinyl live-edge kombucha PBR&B marfa. Lyft blue bottle tofu neutra organic subway 
+                      tile taiyaki slow-carb, helvetica distillery hexagon salvia. Pinterest occupy tote bag plaid vegan vape 
+                      kickstarter tacos af taiyaki DIY thundercats banh mi. 
                 </p>
             </div>
         </div>
