Add quiz section to home page

--- a/index.html
+++ b/index.html
@@ -180,24 +180,30 @@
     </section>
     <!-- END: parralex testimonial section -->
 
-    <!-- cta section -->
-    <section class="home-cta">
-        <div class="home-cta-content">
-            <div class="home-cta-window">
-                <h2 class="home-cta-title">
-                    Join the fun! Let's work together!
-                </h2>
-                <p class="normal-text">
-                    Biodiesel health goth deep v, brunch aesthetic photo booth 
-                    street art pop-up meh 
-                </p>
-                <div class="home-cta-btn">
-                    <a class="" href="services.html">See coaching options</a>
-                </div>
+    <!-- quiz section -->
+    <section class="quiz-section">
+        <h2 class="quiz-title sect-title">
+            The coaching personality 
+        </h2>
+        <h3 class="quiz-font logo-font">
+            quiz
+        </h3>
+        <div class="quiz-cta-content">
+            <h4 class="quiz-content-title sect-title">
+                Find out what your website style is in less than 60 seconds! 
+            </h4>
+            <p class="quiz-content-main normal-text">
+                Personal life coaching is not for everyone. There are some who would benefit from a 
+                life coach, but they aren't ready to make the changes necessary to better their lives. 
+                After the quiz you will have a clearer idea and understanding as to whether a life coach is right for you.
+            </p>
+            <div class="quiz-cta">
+                <a href="" class="quiz-cta-btn btn-black normal-text">Take the quiz</a>
             </div>
         </div>
     </section>
-    <!-- END: cta section -->
+    <!-- END: quiz section -->
+    
     
     <!-- Parralex quote section -->
     <section class="quote-parallax-container">
