--- a/snippets/snippets.html
+++ b/snippets/snippets.html
@@ -85,3 +85,22 @@
 </section>
 
 <!-- END: testimonial slider -->
+
+<!-- cta section -->
+<section class="home-cta">
+    <div class="home-cta-content">
+        <div class="home-cta-window">
+            <h2 class="home-cta-title">
+                Join the fun! Let's work together!
+            </h2>
+            <p class="normal-text">
+                Biodiesel health goth deep v, brunch aesthetic photo booth 
+                street art pop-up meh 
+            </p>
+            <div class="home-cta-btn">
+                <a class="" href="services.html">See coaching options</a>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- END: cta section -->
