Add dummy quiz banner code
Placeholder

--- a/about.html
+++ b/about.html
@@ -287,6 +287,20 @@
     </div>
     <!-- END: back to top -->
 
+    <!-- quiz banner section -->
+    <!-- <div class="quiz-banner">
+        <p class="sect-title quiz-banner-title">
+            Take the coaching quiz.
+        </p>
+        <p class="quiz-banner-text">
+            Have a clearer idea and understanding as to whether a life coach is right for you.
+        </p>
+        <div class="quiz-banner-cta">
+            <a href="" class="quiz-banner-button">Take the quiz!</a>
+        </div>
+    </div> -->
+    <!-- END: quiz banner section -->
+
 
     <!-- footer -->
     <footer class="sect-subtitle">
