Adjust sizes of index containers
Fill out white space

--- a/index.html
+++ b/index.html
@@ -158,53 +158,6 @@
     </section>
     <!-- END: home-coaching section -->
 
-    <!-- Parralex testimonial section -->
-    <section class="testimonial-container">
-        <div class="testimonial-parallax-window" data-parallax="scroll" data-image-src="static/img/bg-img/nature.jpeg"></div>
-        <div class="testimonial-parallax">
-            <div class="love-hearts">
-                <i class="fas fa-heart"></i>
-                <i class="fas fa-heart"></i>
-                <i class="fas fa-heart"></i>
-                <i class="fas fa-heart"></i>
-                <i class="fas fa-heart"></i>
-            </div>
-            <p class="quote-text-dark">
-                "Working with Mhairi truly transformed my life & business.
-                I'm forever a fan!!" 
-            </p>
-            <p class="normal-text">
-                - Celeste. W
-            </p>
-        </div>
-    </section>
-    <!-- END: parralex testimonial section -->
-
-    <!-- quiz section -->
-    <section class="quiz-section">
-        <h2 class="quiz-title sect-title">
-            The coaching personality 
-        </h2>
-        <h3 class="quiz-font logo-font">
-            quiz
-        </h3>
-        <div class="quiz-cta-content">
-            <h4 class="quiz-content-title sect-title">
-                Find out what your website style is in less than 60 seconds! 
-            </h4>
-            <p class="quiz-content-main normal-text">
-                Personal life coaching is not for everyone. There are some who would benefit from a 
-                life coach, but they aren't ready to make the changes necessary to better their lives. 
-                After the quiz you will have a clearer idea and understanding as to whether a life coach is right for you.
-            </p>
-            <div class="quiz-cta">
-                <a href="" class="quiz-cta-btn btn-black normal-text">Take the quiz</a>
-            </div>
-        </div>
-    </section>
-    <!-- END: quiz section -->
-    
-    
     <!-- Parralex quote section -->
     <section class="quote-parallax-container">
         <div class="quote-parallax-window" data-parallax="scroll" data-image-src="static/img/bg-img/out-to-sea.jpeg"></div>
@@ -219,6 +172,46 @@
         </div>
     </section>
     <!-- END: parralex quote section -->
+
+    <!-- quiz section -->
+    <section class="quiz-section">
+        <h2 class="quiz-title sect-title">
+            The coaching personality 
+        </h2>
+        <h3 class="quiz-font logo-font">
+            quiz
+        </h3>
+        <div class="quiz-cta-content">
+            <h4 class="quiz-content-title sect-title">
+                Find out what your website style is in less than 60 seconds! 
+            </h4>
+            <!-- <p class="quiz-content-main normal-text">
+                Personal life coaching is not for everyone. There are some who would benefit from a 
+                life coach, but they aren't ready to make the changes necessary to better their lives. 
+                After the quiz you will have a clearer idea and understanding as to whether a life coach is right for you.
+            </p> -->
+            <div class="quiz-cta">
+                <a href="" class="quiz-cta-btn btn-black normal-text">Take the quiz</a>
+            </div>
+        </div>
+    </section>
+    <!-- END: quiz section -->
+
+    <!-- Parralex services section -->
+    <section class="services-cta">
+        <div class="services-parallax-window" data-parallax="scroll" data-image-src="static/img/core-img/woman-sit-table.jpeg">
+            <div class="services-cta-content">
+                <h2 class="cta-title">
+                    Get ready to start living
+                </h2>
+                <h3 class="cta-subtitle">
+                    The life of your dreams.
+                </h3>
+                <a class="btn-dark-pink services-cta-btn" href="services.html">Work with Mhairi</a>
+            </div>
+        </div>
+    </section>
+    <!-- END: parralex services section -->
 
     <!-- contact footer section -->
     <section class="contact-footer">
