Adjust testimonials page containers

--- a/about.html
+++ b/about.html
@@ -137,30 +137,28 @@
 
     <!-- Parralex numbers section -->
     <div class="numbers-parralax" data-parallax="scroll" data-image-src="static/img/bg-img/water-flowers.jpeg">
-        <section id="new-numbers" class="numbers-sect">
+        <section id="old-numbers" class="numbers-sect" >
             <div class="numbers-content">
                 <div class="numbers-item">
-                    <p class="numbers-text" data-aos="numbers-slide">"After working with Nicole, my business revenue grew 10x! I couldn't even believe it!"</p>
-                    <h3 class="number-desc normal-text" data-aos="numbers-text-slide">- Andrew. P</h3>
+                    <p class="numbers-text" data-aos="numbers-slide">50+</p>
+                    <h3 class="number-desc normal-text" data-aos="numbers-text-slide">Number of happy clients</h3>
                 </div>
                 <div class="numbers-item">
-                    <p class="numbers-text" data-aos="numbers-slide" data-aos-delay="200">"Nicole's philosophy completely changed by life. She is a JOY to learn from and has so much wisdom to offer."</p>
-                    <h3 class="number-desc normal-text" data-aos="numbers-text-slide" data-aos-delay="200">- Kate. Y</h3>
+                    <p class="numbers-text" data-aos="numbers-slide" data-aos-delay="200">6</p>
+                    <h3 class="number-desc normal-text" data-aos="numbers-text-slide" data-aos-delay="200">Advanced coaching certifications</h3>
                 </div>
-                <!-- <div class="numbers-item">
-                    <p class="numbers-text" data-aos="numbers-slide" data-aos-delay="300">"Nicole's money mastery program transformed the way I viewed my self-worth. It changed my entire life."</p>
-                    <h3 class="number-desc normal-text" data-aos="numbers-text-slide" data-aos-delay="300">- Darren. S</h3>
-                </div> -->
                 <div class="numbers-item">
-                    <p class="numbers-text" data-aos="numbers-slide" data-aos-delay="400">"Working with Mhairi truly transformed my life & business.
-                        I'm forever a fan!!" </p>
-                    <h3 class="number-desc normal-text" data-aos="numbers-text-slide" data-aos-delay="400">- Celeste. W</h3>
+                    <p class="numbers-text" data-aos="numbers-slide" data-aos-delay="300">10</p>
+                    <h3 class="number-desc normal-text" data-aos="numbers-text-slide" data-aos-delay="300">Number of educational events per year</h3>
+                </div>
+                <div class="numbers-item">
+                    <p class="numbers-text" data-aos="numbers-slide" data-aos-delay="400">3</p>
+                    <h3 class="number-desc normal-text" data-aos="numbers-text-slide" data-aos-delay="400">Cups of tea per day</h3>
                 </div>
             </div>
         </section>
     </div>
-   
-    <!-- END: parralex numbers section -->
+    <!-- END: parralex numbers section -->   
 
     <!-- crazy about section -->
     <section class="crazy-about-sect">
@@ -226,6 +224,22 @@
         </div>
     </section>
     <!-- END: crazy about section -->
+    
+    <!-- Parralex services section -->
+    <section class="services-cta">
+        <div class="services-parallax-window" data-parallax="scroll" data-image-src="static/img/core-img/woman-sit-table.jpeg">
+            <div class="services-cta-content">
+                <h2 class="cta-title">
+                    Get ready to start living
+                </h2>
+                <h3 class="cta-subtitle">
+                    The life of your dreams.
+                </h3>
+                <a class="btn-dark-pink services-cta-btn" href="services.html">Work with Mhairi</a>
+            </div>
+        </div>
+    </section>
+    <!-- END: parralex services section -->
     
     <!-- contact footer section -->
     <section class="contact-footer">
