--- a/testimonials.html
+++ b/testimonials.html
@@ -57,8 +57,8 @@
 
     <!-- Parralex hero section -->
     <section class="contact-hero-container">
-        <div class="contact-hero-parallax-window" data-parallax="scroll" data-image-src="static/img/core-img/woman-book.jpeg"></div>
-        <div class="contact-hero-parallax">
+        <div class="contact-hero-parallax-window testimonial-hero" data-parallax="scroll" data-image-src="static/img/core-img/woman-headphones.jpeg"></div>
+        <!-- <div class="contact-hero-parallax">
             <h1 class="sect-title">
                 Did you say mail?!
             </h1>
@@ -69,12 +69,15 @@
                 Keep scrollin' to contact me about working together, sponsorships, interviews/events, or
                 any questions you have!
             </p>
+        </div> -->
+        <div class="testimonial-hero-text">
+            <h2>Why? Client stories</h2>
         </div>
     </section>
     <!-- END: parralex hero section -->
 
     <!-- intro section -->
-    <section class="services-intro">
+    <section class="services-intro testimonial-intro">
         <h2 class="about-detail-title sect-title intro-title">
             Are you aching for a breakthrough, a change to your everyday life?
         </h2>
@@ -146,14 +149,6 @@
                     </span>
                     <span class="tick-text normal-text">
                         messenger bag small batch austin everyday carry bicycle rights. Mixed up heirloom echo park. YOLO selfies. Microdosing 
-                    </span>
-                </div>
-                <div class="tick-item">
-                    <span class="tick">
-                        <i class="far fa-check-circle"></i>
-                    </span>
-                    <span class="tick-text normal-text">
-                        You're sick of doing it all, never relaxing, and feeling like your schedule controls you. 
                     </span>
                 </div>
             </div>
