--- a/contact.html
+++ b/contact.html
@@ -33,6 +33,7 @@
                 <li class="nav-item rob-font"><a href="index.html">Home</a></li>
                 <li class="nav-item rob-font"><a href="about.html">About</a></li>
                 <li class="nav-item rob-font"><a href="services.html">Services</a></li>
+                <li class="nav-item rob-font"><a href="testimonials.html">Testimonials</a></li>
                 <li class="nav-item rob-font"><a href="#">Contact</a></li>
                 <li class="nav-item social-nav">
                     <span class="social-nav-item"><i class="fab fa-facebook"></i></span>
