Add mhairi content

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="header-logo d-none d-md-block">
             <a class="header-link" href="index.html">
                 <h1 class="logo-1 mb-1">Mhairi Todd</h1>
-                <h2 class="logo-subtitle mb-0">Tranformation Coach</h2>
+                <h2 class="logo-subtitle mb-0">Life Tranformation Coach</h2>
             </a>
         </div>
         <div class="toggle-header">
@@ -49,7 +49,7 @@
     <div class="logo-xs-container d-md-none">
         <div class="header-xs-logo">
             <h1 class="logo-1 mb-1">Mhairi Todd</h1>
-            <h2 class="logo-subtitle">Tranformation Coach</h2>
+            <h2 class="logo-subtitle">Life Tranformation Coach</h2>
         </div>
     </div>
     
@@ -64,20 +64,25 @@
             <img src="static/img/core-img/woman-sit-table.jpeg" alt="Woman sitting on table">
         </div>
         <div class="home-hero-text">
-            <p class="animate__animated animate__fadeInLeft animate__delay-1s">It's time to quit</p>
-            <p class="animate__animated animate__fadeInRight animate__delay-1s">the tiring hustle</p>
-            <p class="animate__animated animate__fadeInLeft animate__delay-1s">& break free to</p>
-            <p class="logo-sub animate__animated animate__fadeInRight animate__delay-2s">your best life ever</p>
+            <!-- <p class="animate__animated animate__fadeInLeft animate__delay-1s">It's time to quit</p>
+            <p class="animate__animated animate__fadeInRight animate__delay-1s">the tiring hustle</p> -->
+            <!-- <p class="animate__animated animate__fadeInLeft animate__delay-1s">& break free to</p>
+            <p class="logo-sub animate__animated animate__fadeInRight animate__delay-2s">your best life ever</p> -->
+            <p class="animate__animated animate__fadeInLeft animate__delay-1s"></p>
+            <p class="animate__animated animate__fadeInLeft animate__delay-1s">Release your power</p>
+            <p class="animate__animated animate__fadeInRight animate__delay-1s">live your purpose</p>
+            <p class="animate__animated animate__fadeInLeft animate__delay-1s"></p>
         </div>
     </section>
     <!-- END: hero section -->
-
+    
     <!-- Home about section -->
     <section class="home-about">
         <div class="home-about-title">
             <h1 class="logo-2">Hey, I'm Mhairi</h1>
-            <h2 class="fw-n home-about-subtitle ml-1">
-                Life coach for busy women on a mission
+            <h2 class="fw-b home-about-subtitle ml-1">
+                Life coach for talented individuals who have yet to unlock their full
+                 potential and feel their true worth... Welcome home.
             </h2>
         </div>
         <div class="home-about-img">
@@ -85,15 +90,13 @@
         </div>
         <div class="home-about-text">
             <p class="normal-text">
-                I'm baby raw denim pork belly YOLO iceland vinyl pabst, taiyaki offal roof 
-                party snackwave intelligentsia leggings jean shorts hammock. Poke hell of disrupt 
-                man braid palo santo. Quinoa readymade yr, man bun keffiyeh 
+                I worked for many years in senior roles with fancy job titles and amazing salaries, but I was never truly fulfilled.
             </p>
             <p class="normal-text">
-                keffiyeh offal man braid echo park banjo lyft 3 wolf moon schlitz chicharrones whatever 
-                selfies typewriter sriracha. Typewriter tbh taiyaki, jianbing franzen actually blue bottle 
-                vice readymade wayfarers. Pitchfork wolf tbh gastropub squid readymade 3 wolf moon, cold-pressed i
-                Phone twee etsy gentrify kinfolk portland.
+                Despite completing a Medical Biology degree I knew my passion lay elsewhere.  Youthful ignorance firmly in hand I gravitated to where I thought I ‘should’.  I was led by society’s depiction of success; impressive job title, six figure salary, nice car, you get the picture.  But when I got all that, I still didn’t feel successful.  More so on the way to getting it I’d been so busy fitting into the mould of what each company needed me to be, I’d lost touch with my true passion….helping people
+            </p>
+            <p class="normal-text">
+                What changed my world?  Disaster.  It was the best thing that happened to me.  Read more about my journey to true fulfilment and happiness and how I can help you with yours.
             </p>
         </div>
         <div class="about-cta-btn">
@@ -111,10 +114,11 @@
             <div class="coaching-text">
                 <h2 class="coaching-title">Who</h2>
                 <p class="normal-text"> 
-                    My 1:1 coaching program is designed for women who twee shoreditch 
-                    hoodie cred man bun affogato YOLO selfies. Microdosing tumblr tofu, 
-                    woke iPhone portland slow-carb messenger bag small batch austin everyday 
-                    carry bicycle rights. Mixed up heirloom echo park.
+                    I know what you’re thinking, is coaching really right for me?  And if so, is Mhairi the ‘one’?  Mind Reading abilities aside these are exactly the questions you should be asking.
+                    <p class="normal-text">
+                        To uncover, take my quick fire quiz and read my story.
+                        Spoiler alert, the fact that you are here means the answers you seek are YES and YES.
+                    </p>
                 </p>
                 <div class="coach-cta-btn">
                     <a class="btn-white-sm" href="services.html">I'm all in!</a>
@@ -128,10 +132,10 @@
             <div class="coaching-text">
                 <h2 class="coaching-title">What</h2>
                 <p class="normal-text p-md-0">  
-                    Take my online workshop that teaches you how to ho twee shoreditch
-                     hoodie cred man bun affogato YOLO selfies. Microdosing tumblr tofu, 
-                     woke iPhone portland slow-carb messenger bag small batch austin everyday
-                      carry bicycle rights. Mixed up heirloom echo park.
+                    So you're all in on the concept of coaching but maybe you’ve had it before and it wasn’t quite the revelation it promised to be, or perhaps you’re new to coaching and have no idea what the journey would look like. 
+                    <p class="normal-text">
+                        Read more about how the programs work and which package would be best for you.
+                    </p>
                 </p>
                 <div class="coach-cta-btn">
                     <a class="btn-white-sm" href="services.html">I'm all in!</a>
@@ -145,10 +149,10 @@
             <div class="coaching-text">
                 <h2 class="coaching-title">Why</h2>
                 <p class="normal-text p-md-0">  
-                    Take my online workshop that teaches you how to ho twee shoreditch
-                     hoodie cred man bun affogato YOLO selfies. Microdosing tumblr tofu, 
-                     woke iPhone portland slow-carb messenger bag small batch austin everyday
-                      carry bicycle rights. Mixed up heirloom echo park.
+                    I’m here to make a fundamental difference in the life you led.  You need to know if that can really happen, right? 
+                    <p class="normal-text">
+                        Read feedback from some of my wonderful clients and find out how you too can live the life you love.
+                    </p>
                 </p>
                 <div class="coach-cta-btn">
                     <a class="btn-white-sm" href="services.html">I'm all in!</a>
