Add true false options to quiz

--- a/quiz.html
+++ b/quiz.html
@@ -31,96 +31,122 @@
             <div class="quiz-main-fs">
                 <form action="#" method="post" class="demoForm" id="demoForm">
                     <div class="quiz-item">
-                        <div class="quiz-checkboxes">
-                            <!-- <input type="checkbox" name="2[]" value="2" class="checkbox"/> -->
-                            <label for="2[]" class="normal-text quiz-tf-label">True</label>
-                            <!-- <input type="checkbox" name="2[]" value="2" class="checkbox"/> -->
-                            <label for="2[]" class="normal-text quiz-tf-label">False</label>
-                        </div>
-                    </div>
-                    <hr>
-                    <div class="quiz-item">
                         <!-- <div class="quiz-checkboxes">
                             <input type="checkbox" name="3[]" value="3" class="checkbox"/>
                             <input type="checkbox" name="3[]" value="3" class="checkbox"/>
                         </div> -->
-                        <label class="normal-text quiz-label">I understand that I am ultimately responsible for the life I live and that I have the power to make the
+                        <label class="normal-text quiz-label">1. I understand that I am ultimately responsible for the life I live and that I have the power to make the
                             changes I want to make.</label> 
+                        <div class="options">
+                            <button class="option-btn">True</button>
+                            <button class="option-btn">False</button>
+                        </div>
                     </div>
-                    <div class="options">
-                        <button class="option-btn">True</button>
-                        <button class="option-btn">False</button>
-                    </div>
-                    
+                    <hr class="quiz-hr">
                     <div class="quiz-item">
                         <!-- <div class="quiz-checkboxes">
                             <input type="checkbox" name="4[]" value="4" class="checkbox"/>
                             <input type="checkbox" name="4[]" value="4" class="checkbox"/>
                         </div> -->
-                        <label class="normal-text quiz-label">I acknowledge that much of the coaching process takes place in between coaching sessions, and I am
+                        <label class="normal-text quiz-label">2. I acknowledge that much of the coaching process takes place in between coaching sessions, and I am
                             ready and willing to put in the necessary work.</label> 
+                        <div class="options">
+                            <button class="option-btn">True</button>
+                            <button class="option-btn">False</button>
+                        </div>
                     </div>
-                    <div class="options">
-                        <button class="option-btn">True</button>
-                        <button class="option-btn">False</button>
-                    </div>
-
+                    <hr class="quiz-hr">
                     <div class="quiz-item">
                         <div class="quiz-checkboxes">
                             <!-- <input type="checkbox" name="5[]" value="5" class="checkbox"/>
                             <input type="checkbox" name="5[]" value="5" class="checkbox"/> -->
                         </div>
-                        <label class="normal-text quiz-label">I am willing to be confronted and challenged on my way of thinking and doing in order to change my life
+                        <label class="normal-text quiz-label">3. I am willing to be confronted and challenged on my way of thinking and doing in order to change my life
                             for the better.</label> 
+                        <div class="options">
+                            <button class="option-btn">True</button>
+                            <button class="option-btn">False</button>
+                        </div>
                     </div>
+                    <hr class="quiz-hr">
                     <div class="quiz-item">
                         <div class="quiz-checkboxes">
                             <!-- <input type="checkbox" name="5[]" value="5" class="checkbox"/>
                             <input type="checkbox" name="5[]" value="5" class="checkbox"/> -->
                         </div>
-                        <label class="normal-text quiz-label">I am willing to be confronted and challenged on my way of thinking and doing in order to change my life
+                        <label class="normal-text quiz-label">3. I am willing to be confronted and challenged on my way of thinking and doing in order to change my life
                             for the better.</label> 
+                        <div class="options">
+                            <button class="option-btn">True</button>
+                            <button class="option-btn">False</button>
+                        </div>
                     </div>
+                    <hr class="quiz-hr">
                     <div class="quiz-item">
                         <div class="quiz-checkboxes">
                             <!-- <input type="checkbox" name="5[]" value="5" class="checkbox"/>
                             <input type="checkbox" name="5[]" value="5" class="checkbox"/> -->
                         </div>
-                        <label class="normal-text quiz-label">I am willing to be confronted and challenged on my way of thinking and doing in order to change my life
+                        <label class="normal-text quiz-label">3. I am willing to be confronted and challenged on my way of thinking and doing in order to change my life
                             for the better.</label> 
+                        <div class="options">
+                            <button class="option-btn">True</button>
+                            <button class="option-btn">False</button>
+                        </div>
                     </div>
+                    <hr class="quiz-hr">
                     <div class="quiz-item">
                         <div class="quiz-checkboxes">
                             <!-- <input type="checkbox" name="5[]" value="5" class="checkbox"/>
                             <input type="checkbox" name="5[]" value="5" class="checkbox"/> -->
                         </div>
-                        <label class="normal-text quiz-label">I am willing to be confronted and challenged on my way of thinking and doing in order to change my life
+                        <label class="normal-text quiz-label">3. I am willing to be confronted and challenged on my way of thinking and doing in order to change my life
                             for the better.</label> 
+                        <div class="options">
+                            <button class="option-btn">True</button>
+                            <button class="option-btn">False</button>
+                        </div>
                     </div>
+                    <hr class="quiz-hr">
                     <div class="quiz-item">
                         <div class="quiz-checkboxes">
                             <!-- <input type="checkbox" name="5[]" value="5" class="checkbox"/>
                             <input type="checkbox" name="5[]" value="5" class="checkbox"/> -->
                         </div>
-                        <label class="normal-text quiz-label">I am willing to be confronted and challenged on my way of thinking and doing in order to change my life
+                        <label class="normal-text quiz-label">3. I am willing to be confronted and challenged on my way of thinking and doing in order to change my life
                             for the better.</label> 
+                        <div class="options">
+                            <button class="option-btn">True</button>
+                            <button class="option-btn">False</button>
+                        </div>
                     </div>
+                    <hr class="quiz-hr">
                     <div class="quiz-item">
                         <div class="quiz-checkboxes">
                             <!-- <input type="checkbox" name="5[]" value="5" class="checkbox"/>
                             <input type="checkbox" name="5[]" value="5" class="checkbox"/> -->
                         </div>
-                        <label class="normal-text quiz-label">I am willing to be confronted and challenged on my way of thinking and doing in order to change my life
+                        <label class="normal-text quiz-label">3. I am willing to be confronted and challenged on my way of thinking and doing in order to change my life
                             for the better.</label> 
+                        <div class="options">
+                            <button class="option-btn">True</button>
+                            <button class="option-btn">False</button>
+                        </div>
                     </div>
+                    <hr class="quiz-hr">
                     <div class="quiz-item">
                         <div class="quiz-checkboxes">
                             <!-- <input type="checkbox" name="5[]" value="5" class="checkbox"/>
                             <input type="checkbox" name="5[]" value="5" class="checkbox"/> -->
                         </div>
-                        <label class="normal-text quiz-label">I am willing to be confronted and challenged on my way of thinking and doing in order to change my life
+                        <label class="normal-text quiz-label">3. I am willing to be confronted and challenged on my way of thinking and doing in order to change my life
                             for the better.</label> 
+                        <div class="options">
+                            <button class="option-btn">True</button>
+                            <button class="option-btn">False</button>
+                        </div>
                     </div>
+                    <hr class="quiz-hr">
                 </form>
             </div>
         </div>
