--- a/snippets/snippets.html
+++ b/snippets/snippets.html
@@ -104,3 +104,12 @@
     </div>
 </section>
 <!-- END: cta section -->
+
+<div class="quiz-item">
+    <div class="quiz-checkboxes">
+        <!-- <input type="checkbox" name="2[]" value="2" class="checkbox"/> -->
+        <label for="2[]" class="normal-text quiz-tf-label">True</label>
+        <!-- <input type="checkbox" name="2[]" value="2" class="checkbox"/> -->
+        <label for="2[]" class="normal-text quiz-tf-label">False</label>
+    </div>
+</div>
